// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1- default state 1`] = `
Object {
  "__manual__": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": false,
  },
  "__promoted__": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": false,
  },
}
`;

exports[`2- location change. should create a group with default filter. 1`] = `
Object {
  "__manual__": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": false,
  },
  "__promoted__": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": false,
  },
  "hot": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": true,
  },
}
`;

exports[`3- location change. should create a group with the filter and tag given. 1`] = `
Object {
  "__manual__": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": false,
  },
  "__promoted__": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": false,
  },
  "hot": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": true,
  },
  "trending-bitcoin": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": true,
  },
}
`;

exports[`4- location change with invalid filter. state should state same. 1`] = `
Object {
  "__manual__": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": false,
  },
  "__promoted__": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": false,
  },
  "hot": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": true,
  },
  "trending-bitcoin": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": true,
  },
}
`;

exports[`5- start fetching. should toggle "loading" 1`] = `
Object {
  "__manual__": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": false,
  },
  "__promoted__": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": false,
  },
  "hot": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": true,
  },
  "trending-bitcoin": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": true,
  },
}
`;

exports[`6- fetch error. should toggle "loading" and add error object to the group. 1`] = `
Object {
  "__manual__": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": false,
  },
  "__promoted__": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": false,
  },
  "hot": Object {
    "entries": Array [],
    "error": "fetch error",
    "hasMore": false,
    "loading": false,
  },
  "trending-bitcoin": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": true,
  },
}
`;

exports[`7- start fetching. 1`] = `
Object {
  "__manual__": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": false,
  },
  "__promoted__": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": false,
  },
  "hot": Object {
    "entries": Array [],
    "error": "fetch error",
    "hasMore": false,
    "loading": false,
  },
  "trending-bitcoin": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": true,
  },
}
`;

exports[`8- fetched. 1`] = `
Object {
  "__manual__": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": false,
  },
  "__promoted__": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": false,
  },
  "hot": Object {
    "entries": Array [],
    "error": "fetch error",
    "hasMore": false,
    "loading": false,
  },
  "trending-bitcoin": Object {
    "entries": Array [
      Object {
        "author": "lorem",
        "payout": 1,
        "permlink": "lorem-ipsum-dolor-sit-amet",
      },
      Object {
        "author": "consectetur",
        "payout": 1,
        "permlink": "consectetur-adipiscing elit-in-vel-enim-libero",
      },
      Object {
        "author": "nam",
        "payout": 1,
        "permlink": "tempor-nibh-eget-enim-vulputate",
      },
      Object {
        "author": "vivamus",
        "payout": 1,
        "permlink": "vivamus-ornare-at-tortor-eu-vestibulum",
      },
    ],
    "error": null,
    "hasMore": true,
    "loading": false,
  },
}
`;

exports[`9- start fetching again (simulates user scrolling down) 1`] = `
Object {
  "__manual__": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": false,
  },
  "__promoted__": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": false,
  },
  "hot": Object {
    "entries": Array [],
    "error": "fetch error",
    "hasMore": false,
    "loading": false,
  },
  "trending-bitcoin": Object {
    "entries": Array [
      Object {
        "author": "lorem",
        "payout": 1,
        "permlink": "lorem-ipsum-dolor-sit-amet",
      },
      Object {
        "author": "consectetur",
        "payout": 1,
        "permlink": "consectetur-adipiscing elit-in-vel-enim-libero",
      },
      Object {
        "author": "nam",
        "payout": 1,
        "permlink": "tempor-nibh-eget-enim-vulputate",
      },
      Object {
        "author": "vivamus",
        "payout": 1,
        "permlink": "vivamus-ornare-at-tortor-eu-vestibulum",
      },
    ],
    "error": null,
    "hasMore": true,
    "loading": true,
  },
}
`;

exports[`10- fetched. should ignore posts already in store. 1`] = `
Object {
  "__manual__": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": false,
  },
  "__promoted__": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": false,
  },
  "hot": Object {
    "entries": Array [],
    "error": "fetch error",
    "hasMore": false,
    "loading": false,
  },
  "trending-bitcoin": Object {
    "entries": Array [
      Object {
        "author": "lorem",
        "payout": 1,
        "permlink": "lorem-ipsum-dolor-sit-amet",
      },
      Object {
        "author": "consectetur",
        "payout": 1,
        "permlink": "consectetur-adipiscing elit-in-vel-enim-libero",
      },
      Object {
        "author": "nam",
        "payout": 1,
        "permlink": "tempor-nibh-eget-enim-vulputate",
      },
      Object {
        "author": "vivamus",
        "payout": 1,
        "permlink": "vivamus-ornare-at-tortor-eu-vestibulum",
      },
      Object {
        "author": "donec",
        "payout": 1,
        "permlink": "donec-bibendum-tortor-ultricies",
      },
    ],
    "error": null,
    "hasMore": false,
    "loading": false,
  },
}
`;

exports[`11- location change for an extra group 1`] = `
Object {
  "__manual__": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": false,
  },
  "__promoted__": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": false,
  },
  "created-bitcoin": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": true,
  },
  "hot": Object {
    "entries": Array [],
    "error": "fetch error",
    "hasMore": false,
    "loading": false,
  },
  "trending-bitcoin": Object {
    "entries": Array [
      Object {
        "author": "lorem",
        "payout": 1,
        "permlink": "lorem-ipsum-dolor-sit-amet",
      },
      Object {
        "author": "consectetur",
        "payout": 1,
        "permlink": "consectetur-adipiscing elit-in-vel-enim-libero",
      },
      Object {
        "author": "nam",
        "payout": 1,
        "permlink": "tempor-nibh-eget-enim-vulputate",
      },
      Object {
        "author": "vivamus",
        "payout": 1,
        "permlink": "vivamus-ornare-at-tortor-eu-vestibulum",
      },
      Object {
        "author": "donec",
        "payout": 1,
        "permlink": "donec-bibendum-tortor-ultricies",
      },
    ],
    "error": null,
    "hasMore": false,
    "loading": false,
  },
}
`;

exports[`12- fetched another group. 1`] = `
Object {
  "__manual__": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": false,
  },
  "__promoted__": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": false,
  },
  "created-bitcoin": Object {
    "entries": Array [
      Object {
        "author": "nam",
        "payout": 1,
        "permlink": "tempor-nibh-eget-enim-vulputate",
      },
    ],
    "error": null,
    "hasMore": false,
    "loading": false,
  },
  "hot": Object {
    "entries": Array [],
    "error": "fetch error",
    "hasMore": false,
    "loading": false,
  },
  "trending-bitcoin": Object {
    "entries": Array [
      Object {
        "author": "lorem",
        "payout": 1,
        "permlink": "lorem-ipsum-dolor-sit-amet",
      },
      Object {
        "author": "consectetur",
        "payout": 1,
        "permlink": "consectetur-adipiscing elit-in-vel-enim-libero",
      },
      Object {
        "author": "nam",
        "payout": 1,
        "permlink": "tempor-nibh-eget-enim-vulputate",
      },
      Object {
        "author": "vivamus",
        "payout": 1,
        "permlink": "vivamus-ornare-at-tortor-eu-vestibulum",
      },
      Object {
        "author": "donec",
        "payout": 1,
        "permlink": "donec-bibendum-tortor-ultricies",
      },
    ],
    "error": null,
    "hasMore": false,
    "loading": false,
  },
}
`;

exports[`13- update a particular entry. 1`] = `
Object {
  "__manual__": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": false,
  },
  "__promoted__": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": false,
  },
  "created-bitcoin": Object {
    "entries": Array [
      Object {
        "author": "nam",
        "payout": 1.2,
        "permlink": "tempor-nibh-eget-enim-vulputate",
      },
    ],
    "error": null,
    "hasMore": false,
    "loading": false,
  },
  "hot": Object {
    "entries": Array [],
    "error": "fetch error",
    "hasMore": false,
    "loading": false,
  },
  "trending-bitcoin": Object {
    "entries": Array [
      Object {
        "author": "lorem",
        "payout": 1,
        "permlink": "lorem-ipsum-dolor-sit-amet",
      },
      Object {
        "author": "consectetur",
        "payout": 1,
        "permlink": "consectetur-adipiscing elit-in-vel-enim-libero",
      },
      Object {
        "author": "nam",
        "payout": 1.2,
        "permlink": "tempor-nibh-eget-enim-vulputate",
      },
      Object {
        "author": "vivamus",
        "payout": 1,
        "permlink": "vivamus-ornare-at-tortor-eu-vestibulum",
      },
      Object {
        "author": "donec",
        "payout": 1,
        "permlink": "donec-bibendum-tortor-ultricies",
      },
    ],
    "error": null,
    "hasMore": false,
    "loading": false,
  },
}
`;

exports[`14- invalidate. should reset the group. 1`] = `
Object {
  "__manual__": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": false,
  },
  "__promoted__": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": false,
  },
  "created-bitcoin": Object {
    "entries": Array [
      Object {
        "author": "nam",
        "payout": 1.2,
        "permlink": "tempor-nibh-eget-enim-vulputate",
      },
    ],
    "error": null,
    "hasMore": false,
    "loading": false,
  },
  "hot": Object {
    "entries": Array [],
    "error": "fetch error",
    "hasMore": false,
    "loading": false,
  },
  "trending-bitcoin": Object {
    "entries": Array [],
    "error": null,
    "hasMore": false,
    "loading": false,
  },
}
`;
